--- a/style.css
+++ b/style.css
@@ -1,7 +1,40 @@
+@font-face {
+    font-family: 'Silkscreen';
+    src: url('fonts/Silkscreen-Regular.ttf') format('truetype');
+}
+
 * {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     user-select: none;
+}
+
+h1,
+h2 {
+    cursor: pointer;
+    text-align: left;
+    margin-left: 8%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    font-family: 'Silkscreen', sans-serif;
+    width: fit-content;
+}
+
+hr {
+    border-top: 1px solid rgb(176, 164, 144);
+    border-radius: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    margin-top: 1.821%;
+    font-size: 30px;
+    height: fit-content;
 }
 
 body {
@@ -10,6 +43,7 @@ body {
 
 header,
 footer {
+    vertical-align: middle;
     padding-top: 1px;
     padding-bottom: 1px;
     background-color: blanchedalmond;
@@ -21,26 +55,10 @@ footer {
     display: block;
 }
 
-.frame {
-    cursor: pointer;
-    text-align: left;
-    margin-left: 50px;
-    font-family: 'Silkscreen', sans-serif;
-    font-size: 50px;
-    width: fit-content;
-}
-
 .Hdivider {
     background-color: rgb(176, 164, 144);
     width: 100%;
     height: 3px;
-}
-
-.Vdivider {
-    background-color: rgb(176, 164, 144);
-    width: 3px;
-    border-radius: 50px;
-    margin-left: 50px;
 }
 
 .footer {
@@ -59,6 +77,8 @@ footer {
     background-color: rgb(219, 203, 179);
     display: flex;
     margin: 0px;
+    padding-left: 5%;
+    padding-right: 5%;
     flex-wrap: wrap;
 }
 
@@ -67,8 +87,7 @@ footer {
     border: 3px solid black;
     background-color: white;
     margin: 10px;
-    padding: 10px;
-    flex-grow: 2;
+    flex-grow: 1;
 }
 
 .blog:hover {
@@ -77,6 +96,18 @@ footer {
 }
 
 .blogtitle {
-    font-size: 35px;
+    font-size: 25px;
     font-weight: 900;
+}
+
+.blogbody {
+    font-size: 20px;
+}
+
+.choosen {
+    background-color: rgb(191, 114, 114);
+    box-shadow: 0px 0px 9px 8px rgb(191, 114, 114);
+    padding-top: 1%;
+    width: 100%;
+    height: 5%;
 }
